Mouse click should trigger virtual keyboard on Android

Have Android also trigger virtual keyboard on mouse up.

Bug: 730038
Change-Id: Ife9979b96f7e21577ed94af65323d4ac45513c88
Reviewed-on: https://chromium-review.googlesource.com/566279
Commit-Queue: Pedro Amaral <amaralp@chromium.org>
Reviewed-by: Alexandre Elias <aelias@chromium.org>
Cr-Commit-Position: refs/heads/master@{#486435}
Former-commit-id: c045864eb64f387e5abca941d6a161a5a759a804