content/renderer/input/render_widget_input_handler.cc
@@ -394,14 +394,6 @@ void RenderWidgetInputHandler::HandleInputEvent(
     DCHECK(!event_overscroll) << "Unexpected overscroll for un-acked event";
   }
 
-#if defined(OS_ANDROID)
-  // Allow the IME to be shown when the focus changes as a consequence
-  // of a processed touch end event.
-  if (input_event.GetType() == WebInputEvent::kTouchEnd &&
-      processed != WebInputEventResult::kNotHandled) {
-    delegate_->ShowVirtualKeyboard();
-  }
-#elif defined(USE_AURA)
   // Show the virtual keyboard if enabled and a user gesture triggers a focus
   // change.
   if (processed != WebInputEventResult::kNotHandled &&
@@ -409,7 +401,6 @@ void RenderWidgetInputHandler::HandleInputEvent(
        input_event.GetType() == WebInputEvent::kMouseUp)) {
     delegate_->ShowVirtualKeyboard();
   }
-#endif
 
   if (!prevent_default &&
       WebInputEvent::IsKeyboardEventType(input_event.GetType()))
